# text-analyzer

./: Cargo.toml  README.md  combined.txt
src/: cli.rs  functions.rs  main.rs  tests.rs  traits.rs
