[package]
name = "text-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-fs = "2.1.1"
futures-lite = "2.3.0"
clap = { version = "4.0.9", features = ["derive"] }